RESOLVED FIXED72218
Fixes to GraphicsContext3D::makeCurrent on gtk and mac
https://bugs.webkit.org/show_bug.cgi?id=72218
Summary Fixes to GraphicsContext3D::makeCurrent on gtk and mac
Nat Duca
Reported 2011-11-12 15:23:38 PST
Fixes to GraphicsContext3D::makeCurrent on gtk and mac
Attachments
Patch (3.21 KB, patch)
2011-11-12 15:24 PST, Nat Duca
no flags
Nat Duca
Comment 1 2011-11-12 15:24:32 PST
Nat Duca
Comment 2 2011-11-12 15:27:59 PST
Eric Seidel (no email)
Comment 3 2011-12-19 11:06:51 PST
Comment on attachment 114845 [details] Patch How do we test this?
Note You need to log in before you can comment on or make changes to this bug.