Fixes to GraphicsContext3D::makeCurrent on gtk and mac https://bugs.webkit.org/show_bug.cgi?id=72218

Unreviewed. Forgot to handle corner cases. Thanks Nico!

* platform/graphics/gtk/GraphicsContext3DGtk.cpp:
(WebCore::GraphicsContext3D::makeContextCurrent):
* platform/graphics/gtk/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::makeContextCurrent):
* platform/graphics/mac/GraphicsContext3DMac.mm:
(WebCore::GraphicsContext3D::makeContextCurrent):

Canonical link: https://commits.webkit.org/88641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100084 268f45cc-cd09-0410-ab3c-d52691b4dbfc